--- a/HCD-3-E1-Media Queries/index.html
+++ b/HCD-3-E1-Media Queries/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <nav>Side Navbar</nav>
+    <nav class="nav">Side Navbar</nav>
     <main>
-      <header>Header</header>
+      <header class="header">Header</header>
       <div class="texts">
         <div class="text">Text</div>
         <div class="text">Text</div>
@@ -21,7 +21,7 @@
         <div class="image">Image</div>
         <div class="image">Image</div>
       </div>
-      <footer>Footer</footer>
+      <footer class="footer">Footer</footer>
     </main>
   </div>
 </body>
