--- a/HCD-3-Project/index.html/index.html
+++ b/HCD-3-Project/index.html/index.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 <!-- Include your CSS files here-->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -29,15 +29,17 @@
 
   <header>
     <!-- Add your website name or logo here -->
-    <p>Hair Day</p>
+    <img src="assets/Logo3.png" alt="Hair Day Logo 3" width="500px">
   </header>  
 
   <nav>
     <!-- Add your website navigation here -->
-    <li><a href="index.html">Home</a></li>
-    <li><a href="book.html">Book Here!</a></li>
-    <li><a href="tutorials.html">Tutorials</a></li>
-    <li><a href="about.html">About</a></li>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="book.html">Book Here!</a></li>
+        <li><a href="tutorials.html">Tutorials</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
   </nav>
 
   <main>
@@ -72,7 +74,7 @@
   </footer>
 
   <!-- Include your JavaScript files here -->
-  <script src=""js/script.js></script>
+  <script src="script.js"></script>
 
 </body>
 </html>
